tests/baselines/reference/parserMemberFunctionDeclaration5.errors.txt
==== tests/cases/compiler/parserMemberFunctionDeclaration5.ts (1 errors) ====
    class C {
        declare Foo() { }
        ~~~~~~~
!!! parserMemberFunctionDeclaration5.ts(2,5): error TS1031: 'declare' modifier cannot appear on a class element.
    }